--- a/calliope/calliope.css
+++ b/calliope/calliope.css
@@ -1,6 +1,6 @@
 /*
 
-   Calliope CSS styles v 0.1
+   Calliope CSS v 0.1
    Copyright 2012 Rafael Bernad de Castro
 
    Licensed under the Apache License, Version 2.0 (the "License");
